test/src/e2e_vm_tests/test_programs/should_fail/multiple_structs_with_the_same_name/src/module1.sw
library module1;

pub struct Thing {}

impl Thing {
    pub fn new() -> Self {
        Thing {}
    }
}
